--- a/style/style.css
+++ b/style/style.css
@@ -2,6 +2,7 @@
 body {
     padding: 0;
     margin: 0;
+    margin-left: 10px:
     font-family: Arial, Helvetica, sans-serif;
     background-color: #f4f4f4;
 }
