--- a/style/style.css
+++ b/style/style.css
@@ -11,7 +11,7 @@ body {
 nav {
     position: sticky;
     top: 0;
-    width: 100%;
+    width: 100vW;
     background-color: rgb(105, 105, 105);
     height: 130px; /* Povečana višina menija */
     display: flex;
